Add users functions

--- a/client/src/component/Join/join.css
+++ b/client/src/component/Join/join.css
@@ -65,5 +65,6 @@ body {
   overflow: hidden;
   transition: .5s;
   margin-top: 25px;
-  letter-spacing: 3px
+  letter-spacing: 3px;
+  cursor: pointer;
 }
