--- a/client/src/component/Input/input.css
+++ b/client/src/component/Input/input.css
@@ -13,12 +13,15 @@ input:focus, textarea:focus, select:focus{
  outline: none;
 }
 .sendButton {
- color: #fff !important;
  text-transform: uppercase;
  text-decoration: none;
- background: #2979FF;
+ /* background:hsl(266, 100%, 58%); */
  padding: 20px;
  display: inline-block;
  width: 20%;
  border: none;
+ cursor: pointer;
+}
+.color{
+ color: hsl(266, 100%, 58%);;
 }
