--- a/client/src/component/Chat/chat.css
+++ b/client/src/component/Chat/chat.css
@@ -10,12 +10,13 @@
  display: flex;
  flex-direction: column;
  justify-content: space-between;
- background: #FFFFFF;
+ background: #ffffff;
  border-radius: 8px;
  height: 60%;
  width: 35%;
  
 }
+
 
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -34,3 +35,4 @@
    width: 60%;
  }
 }
+
